--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "paquettg/php-html-parser": "dev-master",
         "portedcheese/seo-integration": "dev-master",
         "portedcheese/base-settings": "dev-master",
+        "portedcheese/admin-site-menu": "dev-master",
         "chumper/zipper": "dev-master"
     },
     "autoload": {
