--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,12 @@
     "minimum-stability": "dev",
     "require": {
         "paquettg/php-html-parser": "dev-master",
-        "chumper/zipper": "dev-master"
+        "chumper/zipper": "dev-master",
+        "portedcheese/base-settings": "^1.0",
+        "portedcheese/seo-integration": "^1.0",
+        "portedcheese/ajax-forms": "^1.0",
+        "portedcheese/site-news": "^1.0",
+        "portedcheese/site-reviews": "^1.0"
     },
     "autoload": {
         "psr-4": {
