--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "portedcheese/seo-integration": "^1.0",
         "portedcheese/ajax-forms": "^1.0",
         "portedcheese/site-news": "^1.0",
-        "portedcheese/site-reviews": "^1.0"
+        "portedcheese/site-reviews": "^1.0",
+        "portedcheese/contact-page": "^1.0"
     },
     "autoload": {
         "psr-4": {
